Add press release tool with image editing capabilities- Created press-release.html with canvas-based text overlay tool- Added 6 custom fonts (Righteous, Seymour One, Press Start 2P, Audiowide, Goldman, Zen Dots)- Implemented image upload/download functionality with 6 default pleb release backgrounds- Added sticky/floating image preview for better UX- Updated home page with press release tool buttons and feature card- Added URL rewriting rule in .htaccess for clean URLs- Default text: 'Acquires and achieves BTC Yield of % YTD; Now Holds'- Features: font selection, color picker, position controls, letter spacing

--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,13 @@
 RewriteEngine On
 
-# Redirect /treasury to treasury.html
+# Redirect clean URLs to HTML files
+RewriteRule ^home$ home.html [L]
+RewriteRule ^btc-buy-tracker$ btc-buy-tracker.html [L]
 RewriteRule ^treasury$ treasury.html [L]
+RewriteRule ^press-release$ press-release.html [L]
+
+# Redirect root to home
+RewriteRule ^$ home.html [L]
 
 # Optional: Redirect .html extension to clean URLs
 RewriteCond %{THE_REQUEST} /([^.]+)\.html [NC]
