--- a/.htaccess
+++ b/.htaccess
@@ -1,15 +1,68 @@
+# Plebtools .htaccess Configuration
+# This file handles routing for static HTML pages and API calls
+
 RewriteEngine On
 
-# Redirect clean URLs to HTML files
-RewriteRule ^home$ home.html [L]
-RewriteRule ^btc-buy-tracker$ btc-buy-tracker.html [L]
-RewriteRule ^treasury$ treasury.html [L]
-RewriteRule ^press-release$ press-release.html [L]
-RewriteRule ^covered-call-tracker$ coveredcall-tracker.html [L]
+# Handle CORS preflight requests
+RewriteCond %{REQUEST_METHOD} OPTIONS
+RewriteRule ^(.*)$ $1 [R=200,L]
+
+# Route API requests to Flask app (if Python is available)
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^api/(.*)$ app.py [QSA,L]
+
+# Redirect .html URLs to clean URLs (301 permanent redirect)
+RewriteCond %{THE_REQUEST} \s/+([^?\s]*?)\.html[\s?] [NC]
+RewriteRule ^ /%1? [R=301,L]
+
+# Specific page redirects - these must come first
+RewriteRule ^home/?$ home.html [L]
+RewriteRule ^treasury/?$ treasury.html [L]
+RewriteRule ^btc-buy-tracker/?$ btc-buy-tracker.html [L]
+RewriteRule ^coveredcall-tracker/?$ coveredcall-tracker.html [L]
+RewriteRule ^compound-interest-calculator/?$ compound-interest-calculator.html [L]
+RewriteRule ^btc-loan-ltv/?$ btc-loan-ltv.html [L]
+RewriteRule ^pleb-release/?$ pleb-release.html [L]
+RewriteRule ^account/?$ account.html [L]
 
 # Redirect root to home
 RewriteRule ^$ home.html [L]
 
-# Optional: Redirect .html extension to clean URLs
-RewriteCond %{THE_REQUEST} /([^.]+)\.html [NC]
-RewriteRule ^ /%1? [NC,L,R=301]
+# Security headers
+<IfModule mod_headers.c>
+    Header always set X-Content-Type-Options nosniff
+    Header always set X-Frame-Options DENY
+    Header always set X-XSS-Protection "1; mode=block"
+</IfModule>
+
+# Cache static files
+<IfModule mod_expires.c>
+    ExpiresActive On
+    ExpiresByType text/css "access plus 1 month"
+    ExpiresByType application/javascript "access plus 1 month"
+    ExpiresByType image/png "access plus 1 month"
+    ExpiresByType image/jpg "access plus 1 month"
+    ExpiresByType image/jpeg "access plus 1 month"
+    ExpiresByType image/gif "access plus 1 month"
+    ExpiresByType image/ico "access plus 1 month"
+    ExpiresByType image/svg+xml "access plus 1 month"
+</IfModule>
+
+# Protect sensitive files
+<FilesMatch "\.(env|db|sqlite|py)$">
+    Order allow,deny
+    Deny from all
+</FilesMatch>
+
+# Protect data directory
+<Directory "data">
+    Order allow,deny
+    Deny from all
+</Directory>
+
+# Default index file
+DirectoryIndex home.html
+
+# Error pages
+ErrorDocument 404 /home.html
